<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Advanced" >

    <TextView
        android:id="@+id/tvAdvancedHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_options"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAdvancedHeader"
        android:layout_below="@+id/tvAdvancedHeader"
        android:layout_marginTop="44dp"
        android:text="@string/opt_imgsize"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvColorFilter"
        android:layout_centerVertical="true"
        android:text="@string/opt_imgtype"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageSize"
        android:layout_below="@+id/tvImageSize"
        android:layout_marginTop="37dp"
        android:text="@string/opt_colorfilter"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageType"
        android:layout_below="@+id/tvImageType"
        android:layout_marginTop="43dp"
        android:text="@string/opt_sitefilter"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSiteFilter"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_alignLeft="@+id/actvImageType"
        android:layout_alignRight="@+id/actvImageType"
        android:layout_toRightOf="@+id/tvSiteFilter"
        android:ems="10"
        android:hint="Enter site filter" >

        <requestFocus />
    </EditText>

    <AutoCompleteTextView
        android:id="@+id/actvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvImageSize"
        android:layout_alignBottom="@+id/tvImageSize"
        android:layout_alignLeft="@+id/actvImageType"
        android:layout_alignRight="@+id/tvAdvancedHeader"
        android:layout_toRightOf="@+id/tvImageSize"
        android:ems="10"
        android:hint="Enter image size" />

    <AutoCompleteTextView
        android:id="@+id/actvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvColorFilter"
        android:layout_alignBottom="@+id/tvColorFilter"
        android:layout_alignLeft="@+id/actvImageType"
        android:layout_alignRight="@+id/tvAdvancedHeader"
        android:layout_toRightOf="@+id/tvColorFilter"
        android:ems="10"
        android:hint="Enter color" />

    <AutoCompleteTextView
        android:id="@+id/actvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvImageType"
        android:layout_alignBottom="@+id/tvImageType"
        android:layout_alignRight="@+id/tvAdvancedHeader"
        android:layout_toRightOf="@+id/tvImageType"
        android:ems="10"
        android:hint="Enter image type" />

    <Button
        android:id="@+id/btnApplyFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSiteFilter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:onClick="onApplyFilterClick"
        android:text="@string/btn_opt_applyfilter" />

</RelativeLayout>